Fixed issues with long portfolio img on iPhone 6/6s/7/8

--- a/src/components/Portfolio/PortfolioItem.css
+++ b/src/components/Portfolio/PortfolioItem.css
@@ -6,8 +6,8 @@
 
 .img-wrapper > img {
   transition: transform 0.5s ease;
-  height: inherit;
-  width: inherit;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
